welcome.lessons.welcome.traversal.column.TraversalByColumn.scala.error
ColumnByColumn:18: error: illegal start of declaration (possible cause: missing `=' in front of current method body)
  return ((x==x2)&&(y==y2))
  ^